--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             /* 太文字に設定 */
         }
 
-                .datetime-placeholder {
+        .datetime-placeholder {
             position: absolute;
             top: 50%;
             left: 15px;
@@ -291,39 +291,54 @@
             pointer-events: none;
             transition: all 0.3s ease;
         }
+
         .datetime-input {
             width: 100%;
-            padding: 15px; /* サイズを大きく調整 */
-            font-size: 18px; /* フォントサイズを大きく */
+            padding: 15px;
+            /* サイズを大きく調整 */
+            font-size: 18px;
+            /* フォントサイズを大きく */
             border: 1px solid #ccc;
             border-radius: 4px;
             box-sizing: border-box;
         }
-        .datetime-input:focus + .datetime-placeholder,
-        .datetime-input:not(:placeholder-shown) + .datetime-placeholder {
+
+        .datetime-input:focus+.datetime-placeholder,
+        .datetime-input:not(:placeholder-shown)+.datetime-placeholder {
             visibility: hidden;
             opacity: 0;
         }
-        
-        .info-text {
-    margin-top: 10px; /* 下にずらすスペース */
-    font-size: 16px;  /* 読みやすいサイズ */
-    color: #000000;   /* 説明文らしい落ち着いた色 */
-    line-height: 1.5; /* テキスト間の高さを適切に設定 */
-    text-align: center; /* 中央揃え */
-    word-wrap: break-word; /* 長いテキストの折り返しを強制 */
-    transform: translateY(-15px); /* 上に10pxずらす */
-}
 
-/* 携帯端末向けのレスポンシブデザイン */
-@media (max-width: 768px) {
-    .info-text {
-        font-size: 16px; /* スマホでは少し小さく */
-        margin-top: 15px; /* 上下のマージンを調整 */
-        line-height: 1.4; /* テキストの高さ調整 */
-        transform: translateY(-15px); /* 上に10pxずらす */
-    }
-}
+        .info-text {
+            margin-top: 10px;
+            /* 下にずらすスペース */
+            font-size: 16px;
+            /* 読みやすいサイズ */
+            color: #000000;
+            /* 説明文らしい落ち着いた色 */
+            line-height: 1.5;
+            /* テキスト間の高さを適切に設定 */
+            text-align: center;
+            /* 中央揃え */
+            word-wrap: break-word;
+            /* 長いテキストの折り返しを強制 */
+            transform: translateY(-15px);
+            /* 上に10pxずらす */
+        }
+
+        /* 携帯端末向けのレスポンシブデザイン */
+        @media (max-width: 768px) {
+            .info-text {
+                font-size: 16px;
+                /* スマホでは少し小さく */
+                margin-top: 15px;
+                /* 上下のマージンを調整 */
+                line-height: 1.4;
+                /* テキストの高さ調整 */
+                transform: translateY(-15px);
+                /* 上に10pxずらす */
+            }
+        }
     </style>
 </head>
 
@@ -379,8 +394,10 @@
                 <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">電話鑑定</button>
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">ビデオ通話鑑定</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">電話鑑定</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">ビデオ通話鑑定</button>
             </div>
         </div>
 
@@ -389,11 +406,16 @@
                 <span class="highlight-text">◆2名様◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">10分ずつ計20分鑑定</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="15000">20分ずつ計40分鑑定</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">30分ずつ計60分鑑定</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">40分ずつ計80分鑑定</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment10')" data-price="15000">50分ずつ計100分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment6')"
+                    data-price="15000">10分ずつ計20分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment7')"
+                    data-price="15000">20分ずつ計40分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment8')"
+                    data-price="15000">30分ずつ計60分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment9')"
+                    data-price="15000">40分ずつ計80分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment10')"
+                    data-price="15000">50分ずつ計100分鑑定</button>
             </div>
         </div>
 
@@ -402,11 +424,16 @@
                 <span class="highlight-text">◆3名様◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment11')" data-price="15000">10分ずつ計30分鑑定</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment12')" data-price="15000">20分ずつ計60分鑑定</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment13')" data-price="15000">30分ずつ計90分鑑定</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment14')" data-price="15000">40分ずつ計120分鑑定</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment15')" data-price="15000">50分ずつ計150分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment11')"
+                    data-price="15000">10分ずつ計30分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment12')"
+                    data-price="15000">20分ずつ計60分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment13')"
+                    data-price="15000">30分ずつ計90分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment14')"
+                    data-price="15000">40分ずつ計120分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment15')"
+                    data-price="15000">50分ずつ計150分鑑定</button>
             </div>
         </div>
 
@@ -764,87 +791,87 @@
         }
 
         function submitForm() {
-    const formData = {
-        name1: document.getElementById('name1').value.trim(),
-        dateofbirth1: document.getElementById('dateofbirth1').value.trim(), // 生年月日を取得
-        name2: document.getElementById('name2').value.trim(),
-        dateofbirth2: document.getElementById('dateofbirth2').value.trim(), // 生年月日を取得
-        name3: document.getElementById('name3').value.trim(),
-        dateofbirth3: document.getElementById('dateofbirth3').value.trim(), // 生年月日を取得
-        visitCount: visitCount,
-        selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null, // 空の選択肢をチェック
-        irradiationsCount: irradiationsCount,
-        dates: [selectedFullDate],
-        message: document.getElementById('message').value.trim()
-    };
-
-    // フォームデータのチェック
-    if (!formData.name1) {
-        alert('お名前を入力してください。');
-        return;
-    }
-
-    if (!formData.dateofbirth1) {
-        alert('生年月日を入力してください。');
-        return;
-    }
-
-    if (!formData.selectedSymptom) {
-        alert('メニューを選択してください。');
-        return;
-    }
-
-    // LINEトークにメッセージを送信
-    liff.sendMessages([{
-        type: 'text',
-        text: `【予約フォーム】\n1人目お名前：${formData.name1}\n1人目生年月日：${formData.dateofbirth1}\n2人目お名前：${formData.name2}\n2人目生年月日：${formData.dateofbirth2}\n3人目お名前：${formData.name3}\n3人目生年月日：${formData.dateofbirth3}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n${formData.dates[0]}\nメッセージ：${formData.message}`
-    }]).then(() => {
-        /* メッセージ送信成功時の処理 */
-        alert('当日キャンセルは無いようにお願いいたします。');
-        /* LIFFウィンドウを閉じる */
-        liff.closeWindow();
-    }).catch((err) => {
-        /* メッセージ送信失敗時の処理 */
-        console.error('メッセージの送信に失敗しました', err);
-    });
-}
-
-function formatDate(dateStr) {
-    if (!dateStr) return '';
-    const date = new Date(dateStr);
-    return `${date.getFullYear()}年${('0' + (date.getMonth() + 1)).slice(-2)}月${('0' + date.getDate()).slice(-2)}日`;
-}
-
-async function fetchAvailability(date) {
-    const startTime = new Date(date);
-    const endTime = new Date(date);
-    endTime.setDate(endTime.getDate() + 7);
-
-    const cacheKey = startTime.toISOString() + endTime.toISOString();
-
-    // キャッシュを確認
-    if (availabilityCache[cacheKey]) {
-        console.log('Using cached data');
-        updateCalendar(availabilityCache[cacheKey].availability, availabilityCache[cacheKey].businessDays);
-        return;
-    }
-
-    const url = 'https://script.google.com/macros/s/AKfycbw0CD1edg64_Pkif0lB05tJDJwoa6t_CDrsqfwgDoLjqw-bVtf8X1IwFQ1QA3kVIV81/exec' +
-        `?startTime=${startTime.toISOString()}&endTime=${endTime.toISOString()}`;
-
-    try {
-        showLoadingSpinner(); // Show loading spinner
-        const response = await fetch(url);
-        const data = await response.json();
-        console.log(data);
-
-        // 営業日の情報を抽出
-        const businessDays = data.filter(event => event.summary === "営業日").map(event => {
-            return {
-                start: new Date(event.startTime),
-                end: new Date(event.endTime)
+            const formData = {
+                name1: document.getElementById('name1').value.trim(),
+                dateofbirth1: document.getElementById('dateofbirth1').value.trim(), // 生年月日を取得
+                name2: document.getElementById('name2').value.trim(),
+                dateofbirth2: document.getElementById('dateofbirth2').value.trim(), // 生年月日を取得
+                name3: document.getElementById('name3').value.trim(),
+                dateofbirth3: document.getElementById('dateofbirth3').value.trim(), // 生年月日を取得
+                visitCount: visitCount,
+                selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null, // 空の選択肢をチェック
+                irradiationsCount: irradiationsCount,
+                dates: [selectedFullDate],
+                message: document.getElementById('message').value.trim()
             };
-        });
+
+            // フォームデータのチェック
+            if (!formData.name1) {
+                alert('お名前を入力してください。');
+                return;
+            }
+
+            if (!formData.dateofbirth1) {
+                alert('生年月日を入力してください。');
+                return;
+            }
+
+            if (!formData.selectedSymptom) {
+                alert('メニューを選択してください。');
+                return;
+            }
+
+            // LINEトークにメッセージを送信
+            liff.sendMessages([{
+                type: 'text',
+                text: `【予約フォーム】\n1人目お名前：${formData.name1}\n1人目生年月日：${formData.dateofbirth1}\n2人目お名前：${formData.name2}\n2人目生年月日：${formData.dateofbirth2}\n3人目お名前：${formData.name3}\n3人目生年月日：${formData.dateofbirth3}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n${formData.dates[0]}\nメッセージ：${formData.message}`
+            }]).then(() => {
+                /* メッセージ送信成功時の処理 */
+                alert('当日キャンセルは無いようにお願いいたします。');
+                /* LIFFウィンドウを閉じる */
+                liff.closeWindow();
+            }).catch((err) => {
+                /* メッセージ送信失敗時の処理 */
+                console.error('メッセージの送信に失敗しました', err);
+            });
+        }
+
+        function formatDate(dateStr) {
+            if (!dateStr) return '';
+            const date = new Date(dateStr);
+            return `${date.getFullYear()}年${('0' + (date.getMonth() + 1)).slice(-2)}月${('0' + date.getDate()).slice(-2)}日`;
+        }
+
+        async function fetchAvailability(date) {
+            const startTime = new Date(date);
+            const endTime = new Date(date);
+            endTime.setDate(endTime.getDate() + 7);
+
+            const cacheKey = startTime.toISOString() + endTime.toISOString();
+
+            // キャッシュを確認
+            if (availabilityCache[cacheKey]) {
+                console.log('Using cached data');
+                updateCalendar(availabilityCache[cacheKey].availability, availabilityCache[cacheKey].businessDays);
+                return;
+            }
+
+            const url = 'https://script.google.com/macros/s/AKfycbw0CD1edg64_Pkif0lB05tJDJwoa6t_CDrsqfwgDoLjqw-bVtf8X1IwFQ1QA3kVIV81/exec' +
+                `?startTime=${startTime.toISOString()}&endTime=${endTime.toISOString()}`;
+
+            try {
+                showLoadingSpinner(); // Show loading spinner
+                const response = await fetch(url);
+                const data = await response.json();
+                console.log(data);
+
+                // 営業日の情報を抽出
+                const businessDays = data.filter(event => event.summary === "営業日").map(event => {
+                    return {
+                        start: new Date(event.startTime),
+                        end: new Date(event.endTime)
+                    };
+                });
 
                 // データをキャッシュに保存
                 availabilityCache[cacheKey] = { availability: data, businessDays: businessDays };
@@ -862,29 +889,15 @@ function normalizeTime(date) {
     const normalizedDate = new Date(date);
     const hours = normalizedDate.getHours();
 
-    // 深夜時間帯（0時〜5時）の処理
-    if (hours >= 0 && hours <= 5) {
-        normalizedDate.setDate(normalizedDate.getDate() - 1); // 前日として扱う
-        normalizedDate.setHours(hours + 24); // 時間を24時以上に変換
-    } else if (hours >= 24 && hours <= 26) {
-        normalizedDate.setDate(normalizedDate.getDate() - 1); // 24:00, 24:30, 25:00も前日扱い
+    if (hours >= 24) {
+        // 24:00以降の時間を前日として扱う
+        normalizedDate.setDate(normalizedDate.getDate() - 1);
+        normalizedDate.setHours(hours - 24);
     }
     return normalizedDate;
 }
 
-// 現在時刻をチェックし、27時を過ぎたらカレンダーの日付を翌日に進める
-function checkAndUpdateDate() {
-    const now = new Date();
-    const normalizedNow = normalizeTime(now); // 現在時刻を正規化
-
-    // 正規化された時刻が27時を超えた場合
-    if (normalizedNow.getHours() >= 27) {
-        currentDate.setDate(currentDate.getDate() + 1); // 翌日に日付を進める
-        updateCalendarHeader(currentDate); // カレンダーのヘッダーを更新
-        updateCalendar(availabilityCache[currentDate.toISOString()], businessDays); // カレンダーを更新
-    }
-}
-
+// updateCalendar関数の修正箇所
 function updateCalendar(availability, businessDays) {
     const calendar = document.getElementById('calendar1');
     const table = calendar.querySelector('table tbody');
@@ -908,7 +921,6 @@ function updateCalendar(availability, businessDays) {
         '25:00'
     ];
 
-    // テーブルの行を作成（初回のみ）
     if (table.rows.length === 0) {
         for (const time of times) {
             const row = document.createElement('tr');
@@ -976,28 +988,28 @@ function updateCalendar(availability, businessDays) {
                     // メニュー時間と訪問回数の時間を合計して、終了時間を設定
                     slotEnd.setMinutes(slotStart.getMinutes() + menuDuration + visitDuration + irradiationsDuration);
 
-// 30分後の時刻を計算
-const thirtyMinutesLater = new Date(now.getTime() + 30 * 60 * 1000);
+                    // 30分後の時刻を計算
+                    const thirtyMinutesLater = new Date(now.getTime() + 30 * 60 * 1000);
 
-// 時間を26時～30時に変換する関数
-function normalizeTime(date) {
-    const hours = date.getHours();
-    const normalizedHours = hours < 6 ? hours + 24 : hours;
-    const normalizedDate = new Date(date);
-    normalizedDate.setHours(normalizedHours);
-    return normalizedDate;
-}
+                    // 時間を26時～30時に変換する関数
+                    function normalizeTime(date) {
+                        const hours = date.getHours();
+                        const normalizedHours = hours < 6 ? hours + 24 : hours;
+                        const normalizedDate = new Date(date);
+                        normalizedDate.setHours(normalizedHours);
+                        return normalizedDate;
+                    }
 
-// slotStartも正規化
-const normalizedSlotStart = normalizeTime(slotStart);
-const normalizedThirtyMinutesLater = normalizeTime(thirtyMinutesLater);
+                    // slotStartも正規化
+                    const normalizedSlotStart = normalizeTime(slotStart);
+                    const normalizedThirtyMinutesLater = normalizeTime(thirtyMinutesLater);
 
-            // リアルタイムで過ぎた時間帯や30分以内のスロットを✕にする
-            if (slotStart < thirtyMinutesLater) {
-                cell.textContent = '✕';
-                cell.classList.add('unavailable');
-                continue;
-            }
+                    // リアルタイムで過ぎた時間帯や30分以内のスロットを✕にする
+                    if (slotStart < thirtyMinutesLater) {
+                        cell.textContent = '✕';
+                        cell.classList.add('unavailable');
+                        continue;
+                    }
 
                     const isBusinessDay = businessDays.some(businessDay => {
                         const businessDayStart = new Date(businessDay.start);
