--- a/index.html
+++ b/index.html
@@ -766,29 +766,40 @@
         }
 
         function selectDate(cell) {
-            // "unavailable" クラスが付いている場合はクリックを無効化
-            if (cell.classList.contains('unavailable')) {
-                return; // 何もせずに終了
-            }
+    // "unavailable" クラスが付いている場合はクリックを無効化
+    if (cell.classList.contains('unavailable')) {
+        return; // 何もせずに終了
+    }
 
-            // 既に選択されているセルの選択を解除
-            const cells = document.querySelectorAll('.calendar td');
-            cells.forEach(td => td.classList.remove('selected'));
+    // 既に選択されているセルの選択を解除
+    const cells = document.querySelectorAll('.calendar td');
+    cells.forEach(td => td.classList.remove('selected'));
 
-            // 新しいセルを選択状態にする
-            cell.classList.add('selected');
+    // 新しいセルを選択状態にする
+    cell.classList.add('selected');
 
-            // 選択された日付と時間を取得
-            const selectedDay = cell.getAttribute('data-date'); // ISO形式の日付
-            const selectedTime = cell.parentElement.firstChild.textContent; // 時間
-            const date = new Date(selectedDay);
+    // 選択された日付と時間を取得
+    const selectedDay = cell.getAttribute('data-date'); // ISO形式の日付
+    const selectedTime = cell.parentElement.firstChild.textContent; // 時間
+    const date = new Date(selectedDay);
 
-            // 日付部分を「○○年○○月○○日 ○○:○○」形式に変換
-            selectedFullDate = `${date.getFullYear()}年${('0' + (date.getMonth() + 1)).slice(-2)}月${('0' + date.getDate()).slice(-2)}日 ${selectedTime}`;
+    // 時間を分解してチェック
+    const [hour, minute] = selectedTime.split(':').map(Number);
+    if (hour >= 24) {
+        // 24:00以降の場合、日付を前日に設定
+        date.setDate(date.getDate() - 1);
+        date.setHours(hour - 24, minute);
+    } else {
+        // 通常の時間設定
+        date.setHours(hour, minute);
+    }
 
-            // 希望日時を即座に更新
-            updateDisplayInfo();
-        }
+    // 日付部分を「○○年○○月○○日 ○○:○○」形式に変換
+    selectedFullDate = `${date.getFullYear()}年${('0' + (date.getMonth() + 1)).slice(-2)}月${('0' + date.getDate()).slice(-2)}日 ${selectedTime}`;
+
+    // 希望日時を即座に更新
+    updateDisplayInfo();
+}
 
         function submitForm() {
             const formData = {
@@ -884,70 +895,70 @@
             }
         }
 
-// 時間を正規化する関数（27時までを当日として扱う）
-function normalizeTime(date) {
-    const normalizedDate = new Date(date);
-    const hours = normalizedDate.getHours();
-    if (hours >= 0 && hours <= 5) { // 深夜（0時～5時）は27時扱い
-        normalizedDate.setDate(normalizedDate.getDate() - 1); // 前日として扱う
-        normalizedDate.setHours(hours + 24); // 時間を27時表記に変換
-    }
-    return normalizedDate;
-}
-
-// 現在時刻をチェックし、27時を過ぎたらカレンダーの日付を翌日に進める
-function checkAndUpdateDate() {
-    const now = new Date();
-    const normalizedNow = normalizeTime(now); // 現在時刻を正規化
-
-    // 正規化された時刻が27時を超えた場合
-    if (normalizedNow.getHours() >= 27) {
-        currentDate.setDate(currentDate.getDate() + 1); // 翌日に日付を進める
-        updateCalendarHeader(currentDate); // カレンダーのヘッダーを更新
-        updateCalendar(availabilityCache[currentDate.toISOString()], businessDays); // カレンダーを更新
-    }
-}
-
-// updateCalendar関数の修正箇所
-function updateCalendar(availability, businessDays) {
-    const calendar = document.getElementById('calendar1');
-    const table = calendar.querySelector('table tbody');
-
-    const times = [
-        '10:00', '10:30',
-        '11:00', '11:30',
-        '12:00', '12:30',
-        '13:00', '13:30',
-        '14:00', '14:30',
-        '15:00', '15:30',
-        '16:00', '16:30',
-        '17:00', '17:30',
-        '18:00', '18:30',
-        '19:00', '19:30',
-        '20:00', '20:30',
-        '21:00', '21:30',
-        '22:00', '22:30',
-        '23:00', '23:30',
-        '00:00', '00:30',
-        '01:00'
-    ];
-
-    if (table.rows.length === 0) {
-        for (const time of times) {
-            const row = document.createElement('tr');
-            const timeCell = document.createElement('td');
-            timeCell.textContent = time; // 表示用の時間
-            row.appendChild(timeCell);
-
-            for (let i = 0; i < 7; i++) {
-                const cell = document.createElement('td');
-                cell.addEventListener('click', () => selectDate(cell));
-                row.appendChild(cell);
+        // 時間を正規化する関数（27時までを当日として扱う）
+        function normalizeTime(date) {
+            const normalizedDate = new Date(date);
+            const hours = normalizedDate.getHours();
+            if (hours >= 0 && hours <= 5) { // 深夜（0時～5時）は27時扱い
+                normalizedDate.setDate(normalizedDate.getDate() - 1); // 前日として扱う
+                normalizedDate.setHours(hours + 24); // 時間を27時表記に変換
             }
-
-            table.appendChild(row);
+            return normalizedDate;
         }
-    }
+
+        // 現在時刻をチェックし、27時を過ぎたらカレンダーの日付を翌日に進める
+        function checkAndUpdateDate() {
+            const now = new Date();
+            const normalizedNow = normalizeTime(now); // 現在時刻を正規化
+
+            // 正規化された時刻が27時を超えた場合
+            if (normalizedNow.getHours() >= 27) {
+                currentDate.setDate(currentDate.getDate() + 1); // 翌日に日付を進める
+                updateCalendarHeader(currentDate); // カレンダーのヘッダーを更新
+                updateCalendar(availabilityCache[currentDate.toISOString()], businessDays); // カレンダーを更新
+            }
+        }
+
+        function updateCalendar(availability, businessDays) {
+            const calendar = document.getElementById('calendar1');
+            const table = calendar.querySelector('table tbody');
+
+            const times = [
+                '10:00', '10:30',
+                '11:00', '11:30',
+                '12:00', '12:30',
+                '13:00', '13:30',
+                '14:00', '14:30',
+                '15:00', '15:30',
+                '16:00', '16:30',
+                '17:00', '17:30',
+                '18:00', '18:30',
+                '19:00', '19:30',
+                '20:00', '20:30',
+                '21:00', '21:30',
+                '22:00', '22:30',
+                '23:00', '23:30',
+                '24:00', '24:30',
+                '25:00'
+            ];
+
+            // テーブルの行を作成（初回のみ）
+            if (table.rows.length === 0) {
+                for (const time of times) {
+                    const row = document.createElement('tr');
+                    const timeCell = document.createElement('td');
+                    timeCell.textContent = time; // 表示用の時間
+                    row.appendChild(timeCell);
+
+                    for (let i = 0; i < 7; i++) {
+                        const cell = document.createElement('td');
+                        cell.addEventListener('click', () => selectDate(cell));
+                        row.appendChild(cell);
+                    }
+
+                    table.appendChild(row);
+                }
+            }
 
             // テーブルのヘッダーを更新
             updateCalendarHeader(currentDate);
