--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 
 <body>
     <div class="container">
-        <h1>３占屋伊千夜<br>予約フォーム</h1>
+        <h1>占屋伊千夜<br>予約フォーム</h1>
         <div class="info-text">より詳細な予約はチャットにてお願いします<br>例：4名様以上、ひとり60分以上、<br>深夜1〜3時の予約等</div>
         <div class="label2">お名前　※必須</div>
         <input type="text" id="name1" placeholder="お名前を入力してください">
@@ -787,7 +787,7 @@
     const [hour, minute] = selectedTime.split(':').map(Number);
     if (hour >= 24) {
         // 24:00以降の場合、日付を前日に設定
-        date.setDate(date.getDate() - 1);
+        date.setDate(date.getDate() - 2);
         date.setHours(hour - 24, minute);
     } else {
         // 通常の時間設定
