--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         /* 携帯端末向けのレスポンシブデザイン */
         @media (max-width: 768px) {
             .info-text {
-                font-size: 11px;
+                font-size: 15px;
                 /* スマホでは少し小さく */
                 margin-top: 10px;
                 /* 上下のマージンを調整 */
@@ -499,7 +499,7 @@
         </div>
 
         <div class="label">メニューをお選びください</div>
-        <div class="info-text">※メニューを選択すると空き状況のカレンダーが表示されます</div>
+        <div class="info-text">※メニューを選択すると<br>空き状況のカレンダーが表示されます</div>
         <div class="menu-sections">
             <button type="button" onclick="showMenu('male')">まつ毛</button>
             <button type="button" onclick="showMenu('female')">ネイル</button>
@@ -630,7 +630,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2005254357-zKma9BZk'
+                liffId: ''
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
