--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
                 <span class="highlight-text">フェイシャルエステ<br>オプション</span>
             </div>
             <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="1100">【小鼻まわりの毛穴が気になる方にオススメ】<br>毛穴集中エステ</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="1100">毛穴集中エステ</button>
                 <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="2750">ドライヘッドトリートメント</button>
             </div>
         </div>
