--- a/index.html
+++ b/index.html
@@ -525,12 +525,18 @@
             color: black;
             /* ✕を黒色に設定 */
         }
+
         .gel-buttons {
-    display: flex; /* フレックスボックスで配置 */
-    flex-direction: column; /* ボタンを縦並びにする */
-    gap: 10px; /* ボタン間に余白を追加 */
-    width: 100%; /* 親要素の幅を使用 */
-}
+            display: flex;
+            /* フレックスボックスで配置 */
+            flex-direction: column;
+            /* ボタンを縦並びにする */
+            gap: 10px;
+            /* ボタン間に余白を追加 */
+            width: 100%;
+            /* 親要素の幅を使用 */
+        }
+
         .info-
     </style>
 </head>
@@ -869,7 +875,8 @@
             button.classList.toggle('active');
 
             // 選択されたオプションを取得
-            const updatedSelectedButtons = document.querySelectorAll('.symptoms button.active');
+    const updatedSelectedButtons = document.querySelectorAll('.symptoms button.active');
+    selectedSymptom = Array.from(updatedSelectedButtons).map(btn => btn.textContent.trim());
 
             // メニュー時間と価格をリセット
             selectedMenuTime = 0;
@@ -1161,6 +1168,7 @@
             // 表示更新
             updateDisplayInfo();
         }
+
         function selectirradiations(button) {
             // 選択された日時をリセット
             selectedFullDate = '';
@@ -1241,49 +1249,49 @@
         }
 
         function showMenu(menu) {
-    // 選択された日時をリセット
-    selectedFullDate = '';
+            // 選択された日時をリセット
+            selectedFullDate = '';
 
-    // 全てのメニューボタンの選択状態をリセット
-    document.querySelectorAll('.menu-sections button').forEach(button => {
-        button.classList.remove('active');
-    });
+            // 全てのメニューボタンの選択状態をリセット
+            document.querySelectorAll('.menu-sections button').forEach(button => {
+                button.classList.remove('active');
+            });
 
-    // 全てのメニューセクションを非表示
-    document.querySelectorAll('.menu-section').forEach(section => {
-        section.style.display = 'none';
-    });
+            // 全てのメニューセクションを非表示
+            document.querySelectorAll('.menu-section').forEach(section => {
+                section.style.display = 'none';
+            });
 
-    // 選択されたメニューボタンをアクティブ状態にする
-    document.querySelectorAll('.menu-sections button').forEach(button => {
-        if (button.getAttribute('onclick') === `showMenu('${menu}')`) {
-            button.classList.add('active');
+            // 選択されたメニューボタンをアクティブ状態にする
+            document.querySelectorAll('.menu-sections button').forEach(button => {
+                if (button.getAttribute('onclick') === `showMenu('${menu}')`) {
+                    button.classList.add('active');
+                }
+            });
+
+            // 選択されたメニューセクションを表示
+            const selectedSection = document.getElementById(menu);
+            if (selectedSection) {
+                selectedSection.style.display = 'block';
+            }
+
+            // "オフのみ"が選択されている場合は全メニューを非表示にする
+            if (nailCount === 'オフのみ') {
+                document.querySelectorAll('.menu-section').forEach(section => {
+                    section.style.display = 'none';
+                });
+            }
+
+            // メニューとオプションをリセット
+            selectedSymptom = '';      // メニューのリセット
+            irradiationsCount = '';    // オプションのリセット
+            menuPrice = 0;             // メニューの価格リセット
+            optionsPrice = 0;          // オプションの価格リセット
+            totalAmount = 0;           // 合計金額リセット
+
+            // 表示を更新
+            updateDisplayInfo();
         }
-    });
-
-    // 選択されたメニューセクションを表示
-    const selectedSection = document.getElementById(menu);
-    if (selectedSection) {
-        selectedSection.style.display = 'block';
-    }
-
-    // "オフのみ"が選択されている場合は全メニューを非表示にする
-    if (nailCount === 'オフのみ') {
-        document.querySelectorAll('.menu-section').forEach(section => {
-            section.style.display = 'none';
-        });
-    }
-
-    // メニューとオプションをリセット
-    selectedSymptom = '';      // メニューのリセット
-    irradiationsCount = '';    // オプションのリセット
-    menuPrice = 0;             // メニューの価格リセット
-    optionsPrice = 0;          // オプションの価格リセット
-    totalAmount = 0;           // 合計金額リセット
-
-    // 表示を更新
-    updateDisplayInfo();
-}
 
 
         function selectDate(cell) {
@@ -1376,7 +1384,7 @@
                 return;
             }
 
-            const url = 'https://script.google.com/macros/s/AKfycbymAWM1NBnUqb39ORV09drvmq_moDz7yBsurDZmh2CsXFIl_723B83-Dy3AnqwyAaKG/exec' +
+            const url = 'https://script.google.com/macros/s/AKfycby7oLX91nvzH9zVwtewf4cYcnDdTKfWFaZ1wUqPoqbI3z5c_ikjAUAQ9uJ2SlPtpG4i/exec' +
                 `?startTime=${startTime.toISOString()}&endTime=${endTime.toISOString()}`;
 
             try {
