--- a/index.html
+++ b/index.html
@@ -875,8 +875,9 @@
             button.classList.toggle('active');
 
             // 選択されたオプションを取得
-    const updatedSelectedButtons = document.querySelectorAll('.symptoms button.active');
-    selectedSymptom = Array.from(updatedSelectedButtons).map(btn => btn.textContent.trim());
+            const updatedSelectedButtons = document.querySelectorAll('.symptoms button.active');
+            selectedSymptom = Array.from(updatedSelectedButtons).map(btn => btn.textContent.trim());
+            selectedSymptom = selectedMenu.join(', ');
 
             // メニュー時間と価格をリセット
             selectedMenuTime = 0;
