--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
 
 <body>
     <div class="container">
-        <h1>ピスタチオ<br>予約フォーム
+        <h1>ピスタチオあああああ<br>予約フォーム
         </h1>
         <div class="label">お客様名※必須（カタカナ）</div>
         <input type="text" id="name" placeholder="カタカナでお名前を入力してください">
@@ -877,7 +877,7 @@
             // 選択されたオプションを取得
             const updatedSelectedButtons = document.querySelectorAll('.symptoms button.active');
             selectedSymptom = Array.from(updatedSelectedButtons).map(btn => btn.textContent.trim());
-            selectedSymptom = selectedMenu.join(', ');
+            selectedSymptom = selectedSymptom.join(', ');
 
             // メニュー時間と価格をリセット
             selectedMenuTime = 0;
